# les-observateurs

./: .gitignore  README.md  careless-whisper-pill.py  celery_worker.sh  config.toml  les-observateurs.py  pill-feeder.py  pyproject.toml  requirements.txt  tasks.py  watcher.py
les_observateurs/: tasks.py  watcher.py
